--- a/app/src/main/res/layout/activity_qr210_view01.xml
+++ b/app/src/main/res/layout/activity_qr210_view01.xml
@@ -3,64 +3,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/underline"
-    android:weightSum="7"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:weightSum="7">
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.5"
         android:background="@drawable/page_mode_sample_shape"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/qr210_view01_item01"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textColor="@color/black"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <LinearLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="4.5"
-    android:background="@drawable/page_mode_sample_shape"
-    android:orientation="vertical">
-        <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        android:background="@drawable/page_mode_sample_shape"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/qr210_view01_item02"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/qr210_view01_item02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:layout_margin="3dp"
-                android:gravity="center"/>
-            <TextView
-                android:id="@+id/qr210_view01_item07"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:layout_margin="3dp"
-                android:gravity="center"/>
-        </LinearLayout>
+            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:gravity="center|left"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/qr210_view01_item07"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:gravity="center|left"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/qr210_view01_item03"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:layout_margin="3dp"
-            android:gravity="center|left"/>
+            android:layout_margin="1dp"
+            android:layout_weight="2"
+            android:gravity="center|left"
+            android:textColor="@color/black" />
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="2.5"
         android:background="@drawable/page_mode_sample_shape"
         android:orientation="vertical">
 
@@ -68,18 +69,18 @@
             android:id="@+id/qr210_view01_item06"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:background="@color/teal_700"
-            android:layout_margin="2dp"
             android:gravity="center"
             android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp">
+            android:layout_marginRight="2dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/qr210_view01_item04"
@@ -103,28 +104,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp">
+            android:layout_marginRight="2dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/qr210_view01_item05"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textColor="@color/black"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/qr210_view01_item09"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/black"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textColor="@color/black" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/qr210_view01_item10"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/qr210_view01_item11"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
 
     </LinearLayout>
