--- a/app/src/main/res/layout/activity_qrcode_print.xml
+++ b/app/src/main/res/layout/activity_qrcode_print.xml
@@ -106,7 +106,8 @@
                         android:gravity="center"
                         android:inputType="textCapCharacters"
                         android:background="#A9EDBB"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:maxLength="25"/>
 
                     <TextView
                         android:layout_width="0dp"
